scroll shift fixed

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
     monospace;
 }
 html{
+  overflow-y: scroll;
   color: black;
 }
 
